Traceroute utility both in backend and frontend for retrieving metrics
